Fix ticket create requestor div display issue on Safari browser

--- a/src/static/css/ticket.css
+++ b/src/static/css/ticket.css
@@ -571,6 +571,7 @@
 
   .requestor-div {
     flex-direction: column;
+    height: 100%;
     width: 100%;
   }
 
